added swagger comments
